k8s/blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remla-app-blue
spec:
  replicas: 1 # Add more replicas to enable load-balancing
  selector:
    matchLabels:
      app: remla-app
      color: blue
  template:
    metadata:
      labels:
        app: remla-app
        color: blue
    spec:
      containers:
      - name: remla-app
        image: ghcr.io/cathrinepaulsen/remla-group13:0.2.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
