k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: my-service
spec:
  selector:
    app: remla-app
    color: blue
  ports:
    - port: 1234
      targetPort: 8080
