k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /dashboard/
        pathType: Prefix
        backend:
          service:
            name: promstack-grafana
            port:
              number: 3000
  defaultBackend:
    service:
      name: my-service
      port:
        number: 1234
